--- a/Obligatorio/App.html
+++ b/Obligatorio/App.html
@@ -21,7 +21,7 @@
          <div role="main" class = "ui-content">
             <h2 class="mc-text-center">Bienvenido!</h2>
             <p class="mc-top-margin-1-5">Ya estoy registrado</p>
-            <a href="#login" class="ui-btn ui-btn-b ui-corner-all">Ingresar</a>
+            <a href="#login" data-transition="slide" class="ui-btn ui-btn-b ui-corner-all">Ingresar</a>
             <p class="mc-top-margin-1-5">Aún no tienes una cuenta?</p>
             <a href="#register" data-transition="slide" class="ui-btn ui-btn-b ui-corner-all">Registrarme</a>
             <p></p>
